<resources>
    <string name="app_name">EECS4443-Lab04</string>
    <string name="status_ready">Status: Ready</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="profile_image_display">Profile Image Display</string>
    <string name="profile_picture_updater">Profile Picture Updater</string>
    <string name="customize_color">Customize Color</string>
</resources>